queue tab switching overlay on mobile reviewers (bug 839541)

--- a/media/css/devreg/reviewers.less
+++ b/media/css/devreg/reviewers.less
@@ -1300,7 +1300,15 @@ iframe#manifest-contents {
 
 @mobileborder: #d7d2c3;
 
+#queue-tab-overlay, .mobile-queue-search, .tabnav-sprite {
+    display: none;
+}
+
 @media (max-width: @mobile-max) {
+    #toggle-queue-search, #queue-search .button span, .tabnav a {
+        font-size: 16px;
+    }
+
     #site-nav {
         border: 0px;
         .pad {
@@ -1326,7 +1334,13 @@ iframe#manifest-contents {
                     top: 4px;
                 }
             }
+            & > ul li:not(.open):hover > ul, &.open > ul {
+                display: none;
+            }
         }
+    }
+    .mobile-queue-search {
+        display: block;
     }
     #queue-search {
         padding: 0;
@@ -1349,18 +1363,15 @@ iframe#manifest-contents {
             top: 8px;
             span {
                 bottom: 9px;
-                font-size: 16px;
                 position: relative;
             }
         }
         #toggle-queue-search {
             bottom: 64px;
             float: right;
-            font-size: 16px;
             line-height: 6px;
             margin-right: 3px;
             position: relative;
-
         }
     }
     .island #queue-search {
@@ -1457,6 +1468,38 @@ iframe#manifest-contents {
         max-width: 100%;
         overflow-x: auto;
         overflow-y: hidden;
+    .tabnav {
+        li {
+            position: relative;
+        }
+        &+ .island {
+            .border-box;
+            max-width: 100%;
+            overflow-x: auto;
+            overflow-y: hidden;
+        }
+    }
+    html {
+        font-size: 10px;
+    }
+    #page form[role="dialog"][data-type="action"] {
+        z-index: 1007;
+        button {
+            position: static;
+        }
+    }
+    .tabnav-sprite {
+        bottom: 6px;
+        display: block;
+        position: absolute;
+        right: 6px;
+        div {
+            /* Triangle bottom-right. */
+            border-bottom: 10px solid @medium-gray;
+            border-left: 10px solid transparent;
+            height: 0;
+            width: 0;
+        }
     }
     // No mobile man is an island.
     .island {
